# Konnector

./: .breakpoints  .travis.yml  Dockerfile  README.md  clickup.py  docker.sh  gunicorn_conf.py  helpers.py  main.py  pyproject.toml  test.sh  todoist.py
.github/workflows/: master.yaml
app/: auth.html  clickup.py  helpers.py  main.py  task.py  todoist old.py  todoist.py
konnector/: clickup.py  clickup_old.py  helpers.py  konnector.py  main.py  task.py  todoist.py
konnector/domain/activity/: activity.py  activity_date_time.py  activity_repository
konnector/domain/item/: __init__.py  item.py  item_priority.py  item_repository
konnector/domain/platform_item/: clickup_task.py
konnector/lib/domain/item/: __init__.py  (+2 more)
konnector/lib/platform/: platform.py
konnector/lib/task/: task.py
konnector/old/: konnector.py  main.py
konnector/platform/: clickup.py
src/: bootstrap.py  config.py  flask_app.py
src/access/: flask_router.py
src/application/: event_mappings.py  events.py  flask_router.py  message_bus.py
src/application/bootstrap/: bootstrap.py  config.py
src/application/event_handlers/: copy_new_todoist_item_to_clickup.py  move_new_todoist_item_to_clickup.py  sync_clickup_item_to_todoist.py
src/domain/: event.py
src/infrastructure/: events.py  message_bus.py
src/old/: todoist.py
src/old/lib/: helpers.py
src/old/task/: task.py
src/old/tests/: conftest.py
tests/: conftest.py  test_flask_app.py
tests/A_unit/: test_konnector_unit.py
tests/access/: test_flask_router.py
tests/application/: test_flask_router.py
tests/application/event_handlers/: test_move_new_todoist_item_to_clickup.py  test_sync_clickup_item_to_todoist.py
tests/conf/: conf_todoist.py
tests/infrastructure/: test_message_bus.py
tests/integration/: test_konnector.py  test_platforms.py  test_todoist.py
tests/unit/: test_platform.py  test_task.py  test_todoist.py
(+10 files in other folders)
