[tool.poetry]
name = "konnector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Flask = "^2.0.2"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
